<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".instruction.InstructionFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            style="@style/title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_weight="0"
            android:fontFamily="@font/roboto"
            android:text="@string/instruction_text_1"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/instruction_text_2"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/custom_rounded_corners"
            android:fontFamily="@font/roboto"
            android:text="@string/list_of_video_games"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>
</layout>