<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.login.LoginFragment">


    <!--Constraint layout cause I would need to use multiple linear layouts
    to group the label and edit text as will as linear layout to group the two
    buttons horizontally and nest the linear layout but instead I can constrain
    the components to each other instead-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/title_style" />

        <TextView
            android:id="@+id/email_label"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/email_label"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/email_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_edit"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/email"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/password_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/password_label"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/password_label"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/password_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_edit"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/title_margin"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="@dimen/min_height"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/create_login_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@drawable/custom_rounded_corners"
            android:text="@string/create_login"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_button"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/custom_rounded_corners"
            android:text="@string/login"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_login_button"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>