<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".welcome.WelcomeFragment">

    <!--Linear Layout cause I was able  to put all the components
    in one linear layout without having to nest multiple linear layouts-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_margin"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/welcome_to"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin"
            android:layout_weight="1"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/video_game_store"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="60sp" />

        <Button
            android:id="@+id/instruction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/custom_rounded_corners"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/instructions"
            android:textColor="@color/colorPrimary"
            android:textSize="34sp"
            app:cornerRadius="50dp" />

    </LinearLayout>
</layout>