<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".description.DescriptionFragment"
    >

    <data>
        <variable
            name="videoGameViewModel"
            type="com.udacity.shoestore.videogamelist.VideoGamesViewModel" />
    </data>
    <!--Used constraint layout bacause my layout uses
    both horizontal and vertical layouts and if I
    were to use linear layouts it would cause nestings-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_label"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/videogame_input"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:ems="10"
            android:text="@={videoGameViewModel.nameText}"
            android:hint="@string/video_game_name"
            android:importantForAutofill="no"
            android:inputType="textShortMessage"
            android:labelFor="@id/name_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/company"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videogame_input" />

        <EditText
            android:id="@+id/company_input"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:ems="10"
            android:hint="@string/company_name"
            android:text="@={videoGameViewModel.companyText}"
            android:importantForAutofill="no"
            android:inputType="textShortMessage"
            android:labelFor="@id/company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/description"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_input" />

        <EditText
            android:id="@+id/description_input"
            style="@style/input_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:ems="10"
            android:text="@={videoGameViewModel.descriptionText}"
            android:hint="@string/description_of_video_game"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|text"
            android:labelFor="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_rounded_corners"
                android:fontFamily="@font/roboto"
                android:text="@android:string/cancel"
                android:textColor="@color/design_default_color_error"
                android:textSize="24sp" />

            <Button
                android:id="@+id/save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_rounded_corners"
                android:fontFamily="@font/roboto"
                android:text="@string/save"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>